--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#e3f2e8"
     >
+
     <LinearLayout
         android:orientation="vertical"
         android:padding="5dp"
@@ -137,7 +139,7 @@ whether a person is underweight, normal weight,overweight,or obese depending on 
             android:layout_width="match_parent"
             android:layout_height="match_parent">
             <androidx.cardview.widget.CardView
-
+                android:id="@+id/card_view_infancy"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="95dp"
@@ -148,6 +150,7 @@ whether a person is underweight, normal weight,overweight,or obese depending on 
                     android:layout_height="wrap_content"
                     android:orientation="vertical">
                     <ImageView
+
                         android:layout_width="150dp"
                         android:layout_height="150dp"
                         android:scaleType="centerCrop"
@@ -163,7 +166,7 @@ whether a person is underweight, normal weight,overweight,or obese depending on 
             </androidx.cardview.widget.CardView>
 
             <androidx.cardview.widget.CardView
-
+                android:id="@+id/card_view_Pre_school_Children"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="95dp"
@@ -192,7 +195,7 @@ whether a person is underweight, normal weight,overweight,or obese depending on 
             android:layout_width="match_parent"
             android:layout_height="match_parent">
             <androidx.cardview.widget.CardView
-
+                android:id="@+id/card_view_adolescence"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="95dp"
@@ -216,7 +219,7 @@ whether a person is underweight, normal weight,overweight,or obese depending on 
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
             <androidx.cardview.widget.CardView
-
+                android:id="@+id/card_view_young_adults"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="95dp"
@@ -247,7 +250,7 @@ whether a person is underweight, normal weight,overweight,or obese depending on 
             android:layout_width="match_parent"
             android:layout_height="match_parent">
             <androidx.cardview.widget.CardView
-
+                android:id="@+id/card_view_pregnant_Women"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="95dp" >
@@ -271,7 +274,7 @@ whether a person is underweight, normal weight,overweight,or obese depending on 
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
             <androidx.cardview.widget.CardView
-
+                android:id="@+id/card_view_senior_citizen"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="95dp"
