--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#e3f2e8"
+    xmlns:tools="http://schemas.android.com/tools"
     >
 
     <LinearLayout
@@ -47,11 +48,30 @@ whether a person is underweight, normal weight,overweight,or obese depending on 
                     android:gravity="center"/>
             </LinearLayout>
         </androidx.cardview.widget.CardView>
+        <com.google.android.material.textfield.TextInputLayout
+            android:layout_width="200dp"
+
+            android:layout_marginEnd="100dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:layout_marginStart="20dp"
+            android:hint="Enter Your Name ">
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/Enter_your_name"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="textCapWords"
+                android:background="#e3f2e8"
+
+                tools:text="Your Name"/>
+        </com.google.android.material.textfield.TextInputLayout>
+
 
         <RadioGroup
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
+            android:layout_marginEnd="100dp"
             android:layout_marginTop="10dp">
             <RadioButton
                 android:id="@+id/radio_button_male"
@@ -59,64 +79,116 @@ whether a person is underweight, normal weight,overweight,or obese depending on 
                 android:layout_width="wrap_content"
 
                 android:layout_height="wrap_content"
-
+                android:layout_marginStart="25dp"
                 android:text="Male"/>
             <RadioButton
+                android:layout_marginStart="40dp"
                 android:id="@+id/radio_button_female"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Female"/>
         </RadioGroup>
-        <EditText
-            android:id="@+id/Edit_text_Age"
-            android:inputType="number"
-            android:layout_marginTop="10dp"
-
-            android:layout_width="wrap_content"
+        <com.google.android.material.textfield.TextInputLayout
+            android:layout_width="180dp"
+            android:layout_marginEnd="110dp"
             android:layout_height="wrap_content"
-            android:hint= "Age"/>
-
+            android:layout_marginTop="10dp"
+            android:layout_marginStart="20dp"
+            android:hint="Enter Your Age">
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/Edit_text_Age"
+                android:background="#e3f2e8"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="number"
+                tools:text="Your Age"/>
+        </com.google.android.material.textfield.TextInputLayout>
+<TextView
+    android:layout_width="250dp"
+ android:layout_marginTop="10dp"
+    android:padding="10dp"
+    android:layout_marginEnd="50dp"
+   android:textSize="20sp"
+    android:layout_height="50dp"
+    android:text="Enter Your Height"/>
         <LinearLayout
 
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:layout_marginTop="15dp">
+            android:layout_marginStart="5dp">
 
-            <EditText
-                android:id="@+id/Edit_View_Feet"
-                android:inputType="number"
-                android:layout_margin="5dp"
-                android:layout_width="wrap_content"
+            <com.google.android.material.textfield.TextInputLayout
+                android:layout_width="80dp"
+
+                android:layout_marginEnd="100dp"
                 android:layout_height="wrap_content"
-                android:hint= "Feet"
 
-                />
-
-            <EditText
-                android:id="@+id/Edit_View_Inches"
-                android:inputType="number"
-                android:layout_margin="5dp"
-                android:layout_width="wrap_content"
+                android:layout_marginStart="20dp"
+                android:hint=" Feet">
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/Edit_View_Feet"
+                    android:layout_width="80dp"
+                    android:layout_height="wrap_content"
+                    android:inputType="number"
+                    android:background="#e3f2e8"
+                    tools:text="Feet"/>
+            </com.google.android.material.textfield.TextInputLayout>
+            <com.google.android.material.textfield.TextInputLayout
+                android:layout_width="80dp"
+                android:layout_marginEnd="150dp"
                 android:layout_height="wrap_content"
-                android:hint="Inches" />
+
+
+                android:hint="Inches">
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/Edit_View_Inches"
+                    android:layout_width="100dp"
+                    android:layout_marginEnd="50dp"
+                    android:background="#e3f2e8"
+                    android:layout_height="wrap_content"
+                    android:inputType="number"
+                    tools:text=" Inches"/>
+            </com.google.android.material.textfield.TextInputLayout>
+
 
 
         </LinearLayout>
-        <EditText
-            android:id="@+id/Edit_View_weight"
-            android:inputType="number"
+        <com.google.android.material.textfield.TextInputLayout
+            android:layout_width="180dp"
+            android:layout_marginEnd="125dp"
+            android:layout_marginStart="35dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="30dp"
 
-            android:layout_marginTop="10dp"
+            android:hint="Enter Your Weight">
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/Edit_View_weight"
+                android:layout_width="180dp"
+                android:background="#e3f2e8"
+                android:layout_height="wrap_content"
+                android:inputType="number"
+                tools:text="Weight"/>
+        </com.google.android.material.textfield.TextInputLayout>
+
+
+
+        <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:hint="Weight"/>
+            android:layout_margin="10dp"
+            android:hint="Your Text"
+            android:onClick="TexttoSpeechButton"
+            android:textColor="@color/black" />
+
         <Button
+
             android:id="@+id/button_calculate"
             android:textColor="@color/black"
             android:layout_margin="10dp"
-            android:layout_width="wrap_content"
+            android:layout_width="150dp"
             android:layout_height="wrap_content"
+            android:textSize="15sp"
             android:hint="Calculate"/>
 
         <TextView
